# skillprobe

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.agents/skills/write-tests/: SKILL.md
.claude/skills/write-tests/: SKILL.md
.github/: FUNDING.yml
.github/workflows/: publish.yml  test.yml
demo/: test-activation.yaml  test-clean-python.yaml
examples/skills/: clean-python.md  simple-implementations.md  systematic-debugging.md
examples/skills/bad-python/: SKILL.md
examples/skills/clean-code/: SKILL.md
examples/skills/commit-now/: SKILL.md
examples/skills/python-formatter-a/: SKILL.md
examples/skills/python-formatter-b/: SKILL.md
examples/skills/verify-first/: SKILL.md
examples/tests/: test-activation.yaml  test-bad-python.yaml  test-clean-code.yaml  test-clean-python.yaml  test-combo-sample.yaml  test-response-quality.yaml  test-simple-implementations.yaml  test-systematic-debugging.yaml
examples/tests/combo-exemplars/: test-activation-formatters.yaml  test-contradiction-docstrings.yaml  test-workflow-commit-order.yaml
src/skillprobe/: activation.py  assertions.py  baseline.py  cache.py  cli.py  config.py  evidence.py  init_generator.py  loader.py  measure.py  orchestrator.py  reporter.py  workspace.py
src/skillprobe/adapters/: __init__.py  base.py  claude_code.py  cursor.py
src/skillprobe/analysis/: skill_detector.py  token_counter.py
src/skillprobe/harness/: assertions.py  evidence.py  init_generator.py  loader.py  orchestrator.py  reporter.py  workspace.py
src/skillprobe/optimization/: analyzer.py  mutations.py
tests/: conftest.py  test_activation.py  test_adapters.py  test_assertions.py  test_baseline.py  test_cache.py  test_evidence.py  test_examples.py  test_integration.py  test_loader.py  test_matrix.py  test_measure.py  test_orchestrator.py  test_reporter.py  test_workspace.py
tests/test_analysis/: test_skill_detector.py  test_token_counter.py
tests/test_harness/: test_adapters.py  test_assertions.py  test_evidence.py  test_integration.py  test_loader.py  test_orchestrator.py  test_reporter.py  test_workspace.py
tests/test_optimization/: test_analyzer.py  test_mutations.py
tests/test_parsers/: test_anthropic.py  test_openai.py
tests/test_proxy/: test_handler.py  test_live_assertions.py
tests/test_storage/: test_database.py  test_models.py
tests/test_testing/: test_activation.py  test_assertions.py  test_diff.py  test_llm_client.py  test_loader.py  test_runner.py
(+22 files in other folders)
