[project]
name = "skillprobe"
version = "0.1.0"
description = "Intercept, analyze, and test LLM skills and prompts"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "httpx>=0.27",
    "click>=8.1",
    "pyyaml>=6.0",
    "tiktoken>=0.7",
]

[project.scripts]
skillprobe = "skillprobe.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skillprobe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-aiohttp>=1.0",
]
