[project]
name = "skillprobe"
version = "0.3.0"
description = "Automated end-to-end skill testing for LLM coding tools"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [{ name = "Anish Shrestha" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Intended Audience :: Developers",
]
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.scripts]
skillprobe = "skillprobe.cli:main"

[project.urls]
Homepage = "https://github.com/Anyesh/skillprobe"
Repository = "https://github.com/Anyesh/skillprobe"
Issues = "https://github.com/Anyesh/skillprobe/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skillprobe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
